Cambio en el sistema de verificacion de tokens
Se ha optado por eliminar la entidad UserToken y en su lugar he creado las entidades PasswordResetToken y UserPasswordOtp

Tambien cambie el diagrama UML y los endpoints